# ai-foundation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml
docs/: PROJECT_STATUS.md  architecture.md  code_review.md  progress.md  usage_guide.md
examples/: README.md  advanced_agent.py  basic_usage.py  deepseek_usage.py  gemini_usage.py  minimax_usage.py  openrouter_usage.py  tool_and_mcp_usage.py  zhipu_usage.py
scripts/: code_quality_check.py  run_tests.sh  setup_dev.sh
src/: __init__.py
src/agents/: README.md  __init__.py  base.py  conversational_agent.py  react_agent.py
src/config/: manager.py
src/context/: __init__.py  manager.py
src/core/abstracts/: base_provider.py
src/core/interfaces/: __init__.py  icore_ai.py
src/grpc_service/: ai_core.proto  server.py
src/memory/: __init__.py  interfaces.py  manager.py  providers.py
src/providers/image/: __init__.py  generator.py
src/providers/llm/: README.md  __init__.py  anthropic.py  deepseek.py  doubao.py  factory.py  google.py  minimax.py  openai.py  openrouter.py  zhipu.py
src/services/: __init__.py  human_in_loop.py  logging_service.py  token_service.py
src/tools/: __init__.py  tool_manager.py
src/tools/mcp/: client.py
tests/: conftest.py  pytest.ini
tests/integration/: test_full_flow.py
tests/unit/: README.md  test_agent_provider_resolution.py  test_conversation_context_async.py  test_core.py  test_minimax_provider.py  test_minimax_usage.py  test_react_agent_behavior.py  test_zhipu_provider.py
